tests/compiler_errors/enum_bad_name.tlp
enum 1 
    foo bar baz
end